--- a/index.html
+++ b/index.html
@@ -46,9 +46,31 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hey my name is Benjamin Karpel I am a blockchain security analyst. I have a passion for learning new technology and am excited for what the future has in store for me! Please click the link to take a look at some of my <a href="#work">awesome work</a>.</p>
-								<p>I have a background in EDI which is where i started my journey. i have a little over three years of edi experience. I've always found interest in the financial sector especially crypto currency which has led me to explore the futuristic technolgy we know as blockchain.</p>
+								<span class="image main"><img src=BlockChain.JPG alt="" /></span>
+								<p>About Me
+
+Hello there! I'm Benjamin Karpel, a passionate blockchain security analyst with a knack for diving into the latest technologies and uncovering their potential. With over three years of experience in Electronic Data Interchange (EDI), I've developed a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.
+
+My Journey
+
+My journey began in the world of EDI, where I honed my skills in managing electronic data flows with precision and security. However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.
+
+What I Do
+
+As a blockchain security analyst, I specialize in safeguarding the integrity and security of blockchain systems. From identifying vulnerabilities to implementing robust security measures, I ensure that blockchain networks remain resilient against evolving threats.
+
+My Passion
+
+I'm deeply passionate about learning and embracing emerging technologies. The dynamic nature of blockchain keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
+
+Explore My Work
+
+Curious to see some of my projects? Click [here] to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
+
+Let's Connect
+
+Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! Also check out my<a href="#work">awesome work</a>.</p>
+								<p> </p>
 							</article>
 
 						<!-- Work -->
