--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Curious to see some of my projects? Click [here] to take a closer look at my por
 
 Let's Connect
 
-Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! Also check out my<a href="#work">awesome work</a>.</p>
+Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! Also check out my <a href="#work">awesome work</a>.</p>
 								<p> </p>
 							</article>
 
@@ -112,10 +112,10 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-twitter"><span class="Karpelben1">Twitter</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands fa-github"><span class="karpe101">GitHub</span></a></li>
 								</ul>
 							</article>
 
