--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 									<li><a href="#" class="icon brands fa-twitter"><span class="Karpelben1">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="karpe101">GitHub</span></a></li>
-								</ul>
+									<li><a href="#" class="icon brands fa-github"><span class= karpe101.github.io
 							</article>
 
 						<!-- Elements -->
