--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class=https://x.com/karpelben1
+									<li><a href="#" class="icon brands fa-twitter"><span class=(https://x.com/karpelben1)
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class= karpe101.github.io
+									<li><a href="#" class="icon brands fa-github"><span class=(karpe101.github.io)
 							</article>
 
 						<!-- Elements -->
