--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Benjamin Karpel</h1>
-								<p>BlockChain Security Analyst<a href="https://html5up.net"></a><br />
+								<p>BlockChain Security Analyst(<br>)Crypto Currency Enthusiast<a href="https://html5up.net"></a><br />
 								<a href="https://html5up.net/license"></a></p>
 							</div>
 						</div>
