--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
 								<span class="image main"><img src=BlockChain.JPG alt="" /></span>
 								<p>About Me
 
-Hello there! I'm Benjamin Karpel, a passionate blockchain security analyst with a knack for diving into the latest technologies and uncovering their potential. With over three years of experience in Electronic Data Interchange (EDI), I've developed a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.
+My journey began in the world of Electronic Data Interchange (EDI), where I honed my skills in managing electronic data flows with precision and security. Over three years of experience in EDI has equipped me with a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.
 
-My Journey
+My Journey:
 
-My journey began in the world of EDI, where I honed my skills in managing electronic data flows with precision and security. However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.
+However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.
 
-What I Do
+What I Do:
 
 As a blockchain security analyst, I specialize in safeguarding the integrity and security of blockchain systems. From identifying vulnerabilities to implementing robust security measures, I ensure that blockchain networks remain resilient against evolving threats.
 
-My Passion
+My Passion:
 
-I'm deeply passionate about learning and embracing emerging technologies. The dynamic nature of blockchain keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
+I'm deeply passionate about learning and embracing emerging technologies, especially within the cryptocurrency space. The dynamic nature of blockchain and its impact on the financial landscape keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
 
-Explore My Work
+Explore My Work:
 
 Curious to see some of my projects? Click [here] to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
 
-Let's Connect
+Let's Connect:
 
-Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! Also check out my <a href="#work">awesome work</a>.</p>
+Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together.! Also check out my <a href="#work">awesome work</a>.</p>
 								<p> </p>
 							</article>
 
