--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 											<input type="text" name="name" id="name" />
 										</div>
 										<div class="field half">
-											<label for="email">Email</label>
+											<label for="Ben.Karpel@outlook.com">Email</label>
 											<input type="text" name="email" id="email" />
 										</div>
 										<div class="field">
