--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 								</form>
 								<ul class="icons">
 									<li><a href="https://x.com/karpelben1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">Github</span><a></li>
+									<li><a href="https://www.facebook.com/ben.karpel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									
+									<li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span><a></li>
 							</article>
 
 						<!-- Elements -->
@@ -172,9 +172,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="https://x.com/karpelben1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.facebook.com/ben.karpel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										
+										<li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
