--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 										</div>
 										<div class="field half">
 											<label for="Ben.Karpel@outlook.com">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="text" name="Ben.Karpel@outlook.com" id="email" />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
@@ -111,6 +111,7 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 									<li><a href="https://www.facebook.com/ben.karpel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									
 									<li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span><a></li>
+							</ul>
 							</article>
 
 						<!-- Elements -->
