--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
+						<div class="image">
 							<span class="BlockChain.JPG"></span>
 						</div>
 						<div class="content">
