--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="image">
-							<span class="BlockChain.JPG"></span>
-						</div>
-						<div class="content">
+    <img src="BlockChain.JPG" alt="Blockchain Image">
+</div>
+<div class="content">
 							<div class="inner">
 								<h1>Benjamin Karpel</h1>
 								<p>BlockChain Security Analyst<br>Crypto Currency Enthusiast<a href="https://html5up.net"></a><br />
