--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="image">
-    <img src="BlockChain.JPG" alt="Blockchain Image">
+    <img src="bitcoinlogo.zip" alt="bitcoin image">
 </div>
 <div class="content">
 							<div class="inner">
