--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/BlockChain.jpg" alt="" /></span>
 								<h4>My First Project</h4>
 								<p>Making my URL</p>
 							</article>
