--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="image">
-    <img src="bitcoinlogo.zip" alt="bitcoin image">
+ <span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin Image"></span>
 </div>
 <div class="content">
 							<div class="inner">
