--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="image">
- <span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin Image"></span>
+ <span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin Image"style="width: 200px; height: auto;">
+</span>
 </div>
 <div class="content">
 							<div class="inner">
