--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="image">
- <span class="image main"><img src="images/bitcoinlogo_with_transparent_background.png.JPG" alt="Bitcoin Image"style="width: 200px; height: auto;">
+ <span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin Image"style="width: 200px; height: auto;">
 </span>
 </div>
 <div class="content">
@@ -70,7 +70,7 @@ Curious to see some of my projects? Click [here] to take a closer look at my por
 
 Let's Connect:
 
-Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together.! Also check out my <a href="#work">awesome work</a>.</p>
+Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together.! Also check out my <a href="#work">awesome work{color:orange;</a>.</p>
 								<p> </p>
 							</article>
 
