--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ Curious to see some of my projects? Click [here] to take a closer look at my por
 
 Let's Connect:
 
-Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together.! Also check out my <a href="#work">awesome work{color:orange;</a>.</p>
-								<p> </p>
+Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together.! <p>Also check out my <a href="#work" style="color: orange;">awesome work</a>.</p>
 							</article>
 
 						<!-- Work -->
