--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#Projects">Projects</a></li>
 								
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -70,7 +70,7 @@ Curious to see some of my projects? Click [here] to take a closer look at my por
 
 Let's Connect:
 
-Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together.! <p>Also check out my <a href="#work" style="color: orange;">awesome work</a>.</p>
+Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! <p>Also check out my <a href="#work" style="color: orange;">Projects</a>.</p>
 							</article>
 
 						<!-- Work -->
@@ -107,9 +107,9 @@ Whether you're a fellow enthusiast, a potential collaborator, or simply someone 
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://x.com/karpelben1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/ben.karpel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span><a></li>
+    <li><a href="https://x.com/karpelben1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+    <li><a href="https://www.facebook.com/ben.karpel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+    <li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							
 							</article>
 
