--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#Projects">Work</a></li>
+								<li><a href="#Work">Projects</a></li>
 								
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
