--- a/index.html
+++ b/index.html
@@ -1,59 +1,63 @@
 <!DOCTYPE HTML>
 <!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+    Dimension by HTML5 UP
+    html5up.net | @ajlkn
+    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Dimension by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<head>
+    <title>Dimension by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-<div id="wrapper">
+    <!-- Wrapper -->
+    <div id="wrapper">
 
-    <!-- Header -->
-    <header id="header">
-        <div class="image">
-            <span class="image main">
-                <!-- Display the Bitcoin logo image -->
-                <img src="images/bitcoinlogo.JPG" alt="Bitcoin Image" style="width: 200px; height: auto;">
-            </span>
-        </div>
+        <!-- Header -->
+        <header id="header">
+            <!-- Bitcoin logo image -->
+            <div class="image">
+                <span class="image main">
+                    <img src="images/bitcoinlogo.JPG" alt="Bitcoin Image" style="width: 200px; height: auto;">
+                </span>
+            </div>
 
-        <!-- Cryptocurrency Price Ticker -->
-        <div id="ticker">
-            <!-- Placeholder for cryptocurrency prices -->
-        </div>
-    </header>
-</div>
+            <!-- Cryptocurrency Price Ticker -->
+            <div id="ticker">
+                <!-- Placeholder for cryptocurrency prices -->
+            </div>
+        </header>
+    </div>
 
-<!-- JavaScript for fetching and updating cryptocurrency prices -->
-<script>
-    const apiUrl = 'https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum&vs_currencies=usd';
-    const ticker = document.getElementById('ticker');
+    <!-- JavaScript for fetching and updating cryptocurrency prices -->
+    <script>
+        const apiUrl = 'https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum&vs_currencies=usd';
+        const ticker = document.getElementById('ticker');
 
-    function fetchCryptoPrices() {
-        fetch(apiUrl)
-            .then(response => response.json())
-            .then(data => {
-                const bitcoinPrice = data.bitcoin.usd;
-                const ethereumPrice = data.ethereum.usd;
-                // Update the ticker with the latest cryptocurrency prices
-                ticker.innerHTML = `Bitcoin Price: $${bitcoinPrice} | Ethereum Price: $${ethereumPrice}`;
-            })
-            .catch(error => console.error('Error fetching crypto prices:', error));
-    }
+        // Function to fetch cryptocurrency prices
+        function fetchCryptoPrices() {
+            fetch(apiUrl)
+                .then(response => response.json())
+                .then(data => {
+                    const bitcoinPrice = data.bitcoin.usd;
+                    const ethereumPrice = data.ethereum.usd;
+                    // Update the ticker with the latest cryptocurrency prices
+                    ticker.innerHTML = `Bitcoin Price: $${bitcoinPrice} | Ethereum Price: $${ethereumPrice}`;
+                })
+                .catch(error => console.error('Error fetching crypto prices:', error));
+        }
 
-    // Fetch prices initially and then refresh every 30 seconds
-    fetchCryptoPrices();
-    setInterval(fetchCryptoPrices, 30000);
-</script>
+        // Fetch prices initially and then refresh every 30 seconds
+        fetchCryptoPrices();
+        setInterval(fetchCryptoPrices, 30000);
+    </script>
+</body>
+</html>
+
 
 							<div class="inner">
 								<h1>Benjamin Karpel</h1>
