--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 <head>
     <title>Dimension by HTML5 UP</title>
@@ -57,6 +62,7 @@
                 <li><a href="#intro">Intro</a></li>
                 <li><a href="#work">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <!--<li><a href="#elements">Elements</a></li>-->
             </ul>
         </nav>
     </header>
@@ -67,7 +73,7 @@
         <!-- Intro -->
         <article id="intro">
             <h2 class="major">Intro</h2>
-            <span class="image main"><img src="BlockChain.JPG" alt="" /></span>
+            <span class="image main"><img src=BlockChain.JPG alt="" /></span>
             <p>My journey began in the world of Electronic Data Interchange (EDI), where I honed my skills in managing electronic data flows with precision and security. Over three years of experience in EDI has equipped me with a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.
                 My Journey:
                 However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.
@@ -76,9 +82,9 @@
                 My Passion:
                 I'm deeply passionate about learning and embracing emerging technologies, especially within the cryptocurrency space. The dynamic nature of blockchain and its impact on the financial landscape keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
                 Explore My Work:
-                Curious to see some of my projects? Click <a href="#work" style="color: orange;">here</a> to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
+                Curious to see some of my projects? Click [here] to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
                 Let's Connect:
-                Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together!</p>
+                Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! <p>Also check out my <a href="#work" style="color: orange;">Projects</a>.</p>
         </article>
 
         <!-- Work -->
@@ -99,8 +105,8 @@
                         <input type="text" name="name" id="name" />
                     </div>
                     <div class="field half">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" id="email" />
+                        <label for="Ben.Karpel@outlook.com">Email</label>
+                        <input type="text" name="Ben.Karpel@outlook.com" id="email" />
                     </div>
                     <div class="field">
                         <label for="message">Message</label>
@@ -140,8 +146,8 @@
 <!-- Crypto Price Ticker Script -->
 <script src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Initialize CoinGeckoCoinTicker
+    // Ensure the script is loaded before initializing
+    document.getElementById('coin-gecko-ticker-script').onload = function() {
         CoinGeckoCoinTicker.init({
             coin: ['bitcoin', 'ethereum', 'binancecoin', 'solana', 'cardano', 'ripple', 'polkadot', 'dogecoin', 'avalanche', 'chainlink'],
             localization: 'en',
@@ -149,8 +155,9 @@
             priceColor: '#000000',
             fontColor: '#000000'
         });
-    });
+    };
 </script>
 </body>
 </html>
+
 
