--- a/index.html
+++ b/index.html
@@ -6,131 +6,131 @@
 -->
 <html>
 <head>
-    <title>Dimension by HTML5 UP</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-    <!-- Crypto Price Ticker Styles -->
-    <style>
-        #crypto-ticker {
-            background-color: #f4f4f4;
-            padding: 10px;
-            text-align: center;
-        }
-        .crypto-item {
-            display: inline-block;
-            margin: 0 10px;
-            font-size: 16px;
-        }
-    </style>
+	<title>Dimension by HTML5 UP</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<!-- Crypto Price Ticker Styles -->
+	<style>
+		#crypto-ticker {
+			background-color: #f4f4f4;
+			padding: 10px;
+			text-align: center;
+		}
+		.crypto-item {
+			display: inline-block;
+			margin: 0 10px;
+			font-size: 16px;
+		}
+	</style>
 </head>
 <body class="is-preload">
 
 <!-- Wrapper -->
 <div id="wrapper">
 
-    <!-- Crypto Price Ticker -->
-    <div id="crypto-ticker">
-        <h2>Cryptocurrency Prices</h2>
-        <div class="crypto-item" id="bitcoin-price"></div>
-        <div class="crypto-item" id="ethereum-price"></div>
-        <div class="crypto-item" id="binancecoin-price"></div>
-        <div class="crypto-item" id="solana-price"></div>
-        <div class="crypto-item" id="cardano-price"></div>
-        <div class="crypto-item" id="ripple-price"></div>
-        <div class="crypto-item" id="polkadot-price"></div>
-        <div class="crypto-item" id="dogecoin-price"></div>
-        <div class="crypto-item" id="avalanche-price"></div>
-        <div class="crypto-item" id="chainlink-price"></div>
-    </div>
+	<!-- Crypto Price Ticker -->
+	<div id="crypto-ticker">
+		<h2>Cryptocurrency Prices</h2>
+		<div class="crypto-item" id="bitcoin-price"></div>
+		<div class="crypto-item" id="ethereum-price"></div>
+		<div class="crypto-item" id="binancecoin-price"></div>
+		<div class="crypto-item" id="solana-price"></div>
+		<div class="crypto-item" id="cardano-price"></div>
+		<div class="crypto-item" id="ripple-price"></div>
+		<div class="crypto-item" id="polkadot-price"></div>
+		<div class="crypto-item" id="dogecoin-price"></div>
+		<div class="crypto-item" id="avalanche-price"></div>
+		<div class="crypto-item" id="chainlink-price"></div>
+	</div>
 
-    <!-- Header -->
-    <header id="header">
-        <div class="image">
-            <span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin Image" style="width: 200px; height: auto;"></span>
-        </div>
-        <div class="content">
-            <div class="inner">
-                <h1>Benjamin Karpel</h1>
-                <p>BlockChain Security Analyst<br>Crypto Currency Enthusiast<a href="https://html5up.net"></a><br />
-                    <a href="https://html5up.net/license"></a></p>
-            </div>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#intro">Intro</a></li>
-                <li><a href="#work">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <!--<li><a href="#elements">Elements</a></li>-->
-            </ul>
-        </nav>
-    </header>
+	<!-- Header -->
+	<header id="header">
+		<div class="image">
+			<span class="image main"><img src="images/bitcoinlogo.JPG" alt="Bitcoin Image" style="width: 200px; height: auto;"></span>
+		</div>
+		<div class="content">
+			<div class="inner">
+				<h1>Benjamin Karpel</h1>
+				<p>BlockChain Security Analyst<br>Crypto Currency Enthusiast<a href="https://html5up.net"></a><br />
+					<a href="https://html5up.net/license"></a></p>
+			</div>
+		</div>
+		<nav>
+			<ul>
+				<li><a href="#intro">Intro</a></li>
+				<li><a href="#work">Projects</a></li>
+				<li><a href="#contact">Contact</a></li>
+				<!--<li><a href="#elements">Elements</a></li>-->
+			</ul>
+		</nav>
+	</header>
 
-    <!-- Main -->
-    <div id="main">
+	<!-- Main -->
+	<div id="main">
 
-        <!-- Intro -->
-        <article id="intro">
-            <h2 class="major">Intro</h2>
-            <span class="image main"><img src=BlockChain.JPG alt="" /></span>
-            <p>My journey began in the world of Electronic Data Interchange (EDI), where I honed my skills in managing electronic data flows with precision and security. Over three years of experience in EDI has equipped me with a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.
-                My Journey:
-                However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.
-                What I Do:
-                As a blockchain security analyst, I specialize in safeguarding the integrity and security of blockchain systems. From identifying vulnerabilities to implementing robust security measures, I ensure that blockchain networks remain resilient against evolving threats.
-                My Passion:
-                I'm deeply passionate about learning and embracing emerging technologies, especially within the cryptocurrency space. The dynamic nature of blockchain and its impact on the financial landscape keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
-                Explore My Work:
-                Curious to see some of my projects? Click [here] to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
-                Let's Connect:
-                Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! <p>Also check out my <a href="#work" style="color: orange;">Projects</a>.</p>
-        </article>
+		<!-- Intro -->
+		<article id="intro">
+			<h2 class="major">Intro</h2>
+			<span class="image main"><img src=BlockChain.JPG alt="" /></span>
+			<p>My journey began in the world of Electronic Data Interchange (EDI), where I honed my skills in managing electronic data flows with precision and security. Over three years of experience in EDI has equipped me with a keen eye for data management and security, laying a robust foundation for my journey into the exciting realm of blockchain.
+				My Journey:
+				However, my fascination with the financial sector, particularly cryptocurrencies, sparked a curiosity that led me to explore the transformative power of blockchain technology.
+				What I Do:
+				As a blockchain security analyst, I specialize in safeguarding the integrity and security of blockchain systems. From identifying vulnerabilities to implementing robust security measures, I ensure that blockchain networks remain resilient against evolving threats.
+				My Passion:
+				I'm deeply passionate about learning and embracing emerging technologies, especially within the cryptocurrency space. The dynamic nature of blockchain and its impact on the financial landscape keeps me on my toes, constantly seeking new challenges and opportunities to push the boundaries of what's possible.
+				Explore My Work:
+				Curious to see some of my projects? Click [here] to take a closer look at my portfolio and discover how I'm shaping the future of blockchain security.
+				Let's Connect:
+				Whether you're a fellow enthusiast, a potential collaborator, or simply someone curious about blockchain, I'd love to connect! Feel free to reach out and let's embark on this exciting journey together! <p>Also check out my <a href="#work" style="color: orange;">Projects</a>.</p>
+		</article>
 
-        <!-- Work -->
-        <article id="work">
-            <h2 class="major">Work</h2>
-            <span class="image main"><img src="images/BlockChain.jpg" alt="" /></span>
-            <h4>My First Project</h4>
-            <p>Making my URL</p>
-        </article>
+		<!-- Work -->
+		<article id="work">
+			<h2 class="major">Work</h2>
+			<span class="image main"><img src="images/BlockChain.jpg" alt="" /></span>
+			<h4>My First Project</h4>
+			<p>Making my URL</p>
+		</article>
 
-        <!-- Contact -->
-        <article id="contact">
-            <h2 class="major">Contact</h2>
-            <form method="post" action="#">
-                <div class="fields">
-                    <div class="field half">
-                        <label for="name">Name</label>
-                        <input type="text" name="name" id="name" />
-                    </div>
-                    <div class="field half">
-                        <label for="Ben.Karpel@outlook.com">Email</label>
-                        <input type="text" name="Ben.Karpel@outlook.com" id="email" />
-                    </div>
-                    <div class="field">
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message" rows="4"></textarea>
-                    </div>
-                </div>
-                <ul class="actions">
-                    <li><input type="submit" value="Send Message" class="primary" /></li>
-                    <li><input type="reset" value="Reset" /></li>
-                </ul>
-            </form>
-            <ul class="icons">
-                <li><a href="https://x.com/karpelben1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/ben.karpel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                <li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span></a></li>
-            </ul>
-        </article>
+		<!-- Contact -->
+		<article id="contact">
+			<h2 class="major">Contact</h2>
+			<form method="post" action="#">
+				<div class="fields">
+					<div class="field half">
+						<label for="name">Name</label>
+						<input type="text" name="name" id="name" />
+					</div>
+					<div class="field half">
+						<label for="Ben.Karpel@outlook.com">Email</label>
+						<input type="text" name="Ben.Karpel@outlook.com" id="email" />
+					</div>
+					<div class="field">
+						<label for="message">Message</label>
+						<textarea name="message" id="message" rows="4"></textarea>
+					</div>
+				</div>
+				<ul class="actions">
+					<li><input type="submit" value="Send Message" class="primary" /></li>
+					<li><input type="reset" value="Reset" /></li>
+				</ul>
+			</form>
+			<ul class="icons">
+				<li><a href="https://x.com/karpelben1" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://www.facebook.com/ben.karpel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="https://karpe101.github.io/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+			</ul>
+		</article>
 
-    </div>
+	</div>
 
-    <!-- Footer -->
-    <footer id="footer">
-        <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-    </footer>
+	<!-- Footer -->
+	<footer id="footer">
+		<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+	</footer>
 
 </div>
 
@@ -144,21 +144,28 @@
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 <!-- Crypto Price Ticker Script -->
-<script id="coin-gecko-ticker-script" src="https://widgets.coingecko.com/coingecko-coin-ticker-widget.js"></script>
 <script>
-    // Ensure the script is loaded before initializing
-    document.addEventListener('DOMContentLoaded', function() {
-        CoinGeckoCoinTicker.init({
-            coin: ['bitcoin', 'ethereum', 'binancecoin', 'solana', 'cardano', 'ripple', 'polkadot', 'dogecoin', 'avalanche', 'chainlink'],
-            localization: 'en',
-            backgroundColor: '#f4f4f4',
-            priceColor: '#000000',
-            fontColor: '#000000'
-        });
-    });
+	// Fetch data from CoinGecko API
+	fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,binancecoin,solana,cardano,ripple,polkadot,dogecoin,avalanche,chainlink&vs_currencies=usd')
+		.then(response => response.json())
+		.then(data => {
+			// Update prices
+			document.getElementById('bitcoin-price').innerText = 'Bitcoin: $' + data.bitcoin.usd;
+			document.getElementById('ethereum-price').innerText = 'Ethereum: $' + data.ethereum.usd;
+			document.getElementById('binancecoin-price').innerText = 'Binance Coin: $' + data.binancecoin.usd;
+			document.getElementById('solana-price').innerText = 'Solana: $' + data.solana.usd;
+			document.getElementById('cardano-price').innerText = 'Cardano: $' + data.cardano.usd;
+			document.getElementById('ripple-price').innerText = 'Ripple: $' + data.ripple.usd;
+			document.getElementById('polkadot-price').innerText = 'Polkadot: $' + data.polkadot.usd;
+			document.getElementById('dogecoin-price').innerText = 'Dogecoin: $' + data.dogecoin.usd;
+			document.getElementById('avalanche-price').innerText = 'Avalanche: $' + data.avalanche.usd;
+			document.getElementById('chainlink-price').innerText = 'Chainlink: $' + data.chainlink.usd;
+		})
+		.catch(error => console.error('Error fetching cryptocurrency prices:', error));
 </script>
+
 </body>
 </html>
->
+
 
 
