--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 	<!-- Crypto Price Ticker -->
 	<div id="crypto-ticker">
 		<h2>Cryptocurrency Prices</h2>
-		<div class="crypto-item" id="bitcoin-price">Bitcoin: </div>
-		<div class="crypto-item" id="ethereum-price">Ethereum: </div>
-		<div class="crypto-item" id="binancecoin-price">Binance Coin: </div>
-		<div class="crypto-item" id="solana-price">Solana: </div>
-		<div class="crypto-item" id="cardano-price">Cardano: </div>
-		<div class="crypto-item" id="ripple-price">Ripple: </div>
-		<div class="crypto-item" id="polkadot-price">Polkadot: </div>
-		<div class="crypto-item" id="dogecoin-price">Dogecoin: </div>
-		<div class="crypto-item" id="avalanche-price">Avalanche: </div>
-		<div class="crypto-item" id="chainlink-price">Chainlink: </div>
+		<div class="crypto-item" id="bitcoin-price"></div>
+		<div class="crypto-item" id="ethereum-price"></div>
+		<div class="crypto-item" id="binancecoin-price"></div>
+		<div class="crypto-item" id="solana-price"></div>
+		<div class="crypto-item" id="cardano-price"></div>
+		<div class="crypto-item" id="ripple-price"></div>
+		<div class="crypto-item" id="polkadot-price"></div>
+		<div class="crypto-item" id="dogecoin-price"></div>
+		<div class="crypto-item" id="avalanche-price"></div>
+		<div class="crypto-item" id="chainlink-price"></div>
 	</div>
 
 	<!-- Header -->
